# SDL2-Shooter

./: .gitignore  CMakeLists.txt  README.md  shooter.drawio
shooter/: CMakeLists.txt
shooter/include/shooter/: Game.h  MgrFont.h  MgrMusic.h  MgrScene.h  Resource.h  SC_Bullet.h  SC_Enemy.h  SC_Player.h  Scene.h  SceneGame.h  SceneStart.h
shooter/src/: Game.cpp  MgrFont.cpp  MgrMusic.cpp  MgrScene.cpp  SC_Bullet.cpp  SC_Enemy.cpp  SC_Player.cpp  SceneGame.cpp  SceneStart.cpp  main.cpp
